--- a/nasze-realizacje.html
+++ b/nasze-realizacje.html
@@ -26,30 +26,30 @@
     <!-- Sekcja główna -->
 
     <!-- Treść podstrony Nasze realizacje -->
-        <section class="about-section">
-            <h2>Nasze realizacje</h2>
-            <p>W tej sekcji przedstawiamy nasze dotychczasowe realizacje. Zajmujemy się profesjonalną naprawą i
-                modyfikacją pojazdów marki BMW.</p>
+    <section class="about-section">
+        <h2>Nasze realizacje</h2>
+        <p>W tej sekcji przedstawiamy nasze dotychczasowe realizacje. Zajmujemy się profesjonalną naprawą i
+            modyfikacją pojazdów marki BMW.</p>
 
-            <!-- Przykładowe projekty -->
-            <div class="projects">
-                <div class="project-card">
-                    <img src="gpf_filtr.jpg" alt="Realizacja 1">
-                    <h3>BMW M3 - Kompleksowa naprawa</h3>
-                    <p>Opis realizacji...</p>
-                </div>
-                <div class="project-card">
-                    <img src="aaa.jpg" alt="Realizacja 2">
-                    <h3>BMW X5 - Modyfikacja silnika</h3>
-                    <p>Opis realizacji...</p>
-                </div>
-                <div class="project-card">
-                    <img src="bbb.jpg" alt="Realizacja 3">
-                    <h3>BMW 7 - Serwis i konserwacja</h3>
-                    <p>Opis realizacji...</p>
-                </div>
+        <!-- Przykładowe projekty -->
+        <div class="projects">
+            <div class="project-card">
+                <img src="gpf_filtr.jpg" alt="Realizacja 1">
+                <h3>BMW M3 - Kompleksowa naprawa</h3>
+                <p>Opis realizacji...</p>
             </div>
-        </section>
+            <div class="project-card">
+                <img src="aaa.jpg" alt="Realizacja 2">
+                <h3>BMW X5 - Modyfikacja silnika</h3>
+                <p>Opis realizacji...</p>
+            </div>
+            <div class="project-card">
+                <img src="bbb.jpg" alt="Realizacja 3">
+                <h3>BMW 7 - Serwis i konserwacja</h3>
+                <p>Opis realizacji...</p>
+            </div>
+        </div>
+    </section>
     </main>
 
 
@@ -57,6 +57,12 @@
     <!-- Stopka -->
     <footer>
         <p>&copy; 2024 Warsztat BMW. Wszelkie prawa zastrzeżone.</p>
+        <!-- Licznik odwiedzin -->
+        <div class="visit-counter">
+            <p>Odwiedzono nas:</p>
+            <img src="https://hitwebcounter.com/counter/counter.php?page=7923570&style=0006&nbdigits=5&type=page&initCount=0"
+                title="Odwiedziny" Alt="Licznik odwiedzin" border="0">
+        </div>
     </footer>
 
     <!-- JavaScript do animacji scroll-triggered (opcjonalne) -->
