--- a/index.html
+++ b/index.html
@@ -85,11 +85,33 @@
                     class="button facebook-page">Odwiedź nasz Facebook</a>
             </div>
         </section>
-        
-    <!-- Stopka -->
-    <footer>
-        <p>&copy; 2024 Warsztat BMW. Wszelkie prawa zastrzeżone.</p>
-    </footer>
+
+        <!-- Stopka -->
+        <footer>
+            <p>&copy; 2024 Warsztat BMW. Wszelkie prawa zastrzeżone.</p>
+            <!-- Licznik odwiedzin -->
+            <div class="visit-counter">
+                <p>Odwiedzono nas:</p>
+                <img src="https://hitwebcounter.com/counter/counter.php?page=7923570&style=0006&nbdigits=5&type=page&initCount=0"
+                    title="Odwiedziny" Alt="Licznik odwiedzin" border="0">
+            </div>
+        </footer>
+
+
+        <!-- Skrypt do animacji scroll-triggered -->
+        <script>
+            window.addEventListener('scroll', function () {
+                const elements = document.querySelectorAll('.scroll-animate');
+                elements.forEach((element) => {
+                    const position = element.getBoundingClientRect().top;
+                    const screenPosition = window.innerHeight / 1.3;
+
+                    if (position < screenPosition) {
+                        element.classList.add('active');
+                    }
+                });
+            });
+        </script>
 
 </body>
 
