--- a/uslugi.html
+++ b/uslugi.html
@@ -48,6 +48,12 @@
     <!-- Stopka -->
     <footer>
         <p>&copy; 2024 Warsztat BMW. Wszelkie prawa zastrzeżone.</p>
+        <!-- Licznik odwiedzin -->
+        <div class="visit-counter">
+            <p>Odwiedzono nas:</p>
+            <img src="https://hitwebcounter.com/counter/counter.php?page=7923570&style=0006&nbdigits=5&type=page&initCount=0"
+                title="Odwiedziny" Alt="Licznik odwiedzin" border="0">
+        </div>
     </footer>
 
     <!-- Skrypt do animacji scroll-triggered -->
